[package]
name = "kernel-sign"
version = "0.1.0"
edition = "2021"
publish = false
description = "Detached ES256 signer for boatramp microVM kernel releases — byte-compatible with boatramp-core's verify_kernel."

[[bin]]
name = "kernel-sign"
path = "src/main.rs"

[dependencies]
# Same primitives boatramp-core uses to verify: P-256 ECDSA (ES256), SHA-256,
# fixed 64-byte r‖s signatures. RustCrypto normalises to low-S by default, so the
# output verifies under boatramp's anti-malleability check (unlike python-ecdsa,
# which can emit high-S).
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
hex = "0.4"
